--- a/FIT5032_MyFirstWebApplication/FIT5032_MyFirstWebApplication.csproj
+++ b/FIT5032_MyFirstWebApplication/FIT5032_MyFirstWebApplication.csproj
@@ -304,6 +304,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Home\Service.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
