Edit service page css

--- a/FIT5032_MyFirstWebApplication/FIT5032_MyFirstWebApplication.csproj
+++ b/FIT5032_MyFirstWebApplication/FIT5032_MyFirstWebApplication.csproj
@@ -215,6 +215,7 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="css\header.css" />
+    <Content Include="css\Service.css" />
     <Content Include="css\vendor.css" />
     <Content Include="css\style-starter.css" />
     <Content Include="favicon.ico" />
